chore: fix HFB icon sizes not working fine on iOS

--- a/assets/scss/components/compat/woocommerce/_nav-cart.scss
+++ b/assets/scss/components/compat/woocommerce/_nav-cart.scss
@@ -15,7 +15,7 @@ $cart-width: 360px;
 
 	svg {
 	  width: var(--iconSize);
-	  height: auto;
+	  height: var(--iconSize);
 	}
   }
 
